--- a/form-input-wave/index.html
+++ b/form-input-wave/index.html
@@ -29,7 +29,7 @@
 
         <button class="btn">Login</button>
 
-        <p class="text">Don't have an account? <a href="#">Register</a> </p>
+        <p class="text">Don't have an account? <a href="#" id="reg">Register</a> </p>
       </form>
     </div>
     <script src="script.js"></script>
